kubernetes/bookingservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookingservice
  labels:
    app: bookingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookingservice
  template:
    metadata:
      labels:
        app: bookingservice
    spec:
      containers:
        - name: bookingservice
          image: bforslund/semester-6-booking:122719
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 20m
            limits:
              cpu: 200m
