kubernetes/hotelQueryService-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelqueryservice
  labels:
    app: hotelqueryservice
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: hotelqueryservice
  template:
    metadata:
      labels:
        app: hotelqueryservice
    spec:
      containers:
        - name: hotelqueryservice
          image: bforslund/semester-6-hotelqueryservice:125324
          imagePullPolicy: Always
          volumeMounts:
            - name: secrets-store01-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
            limits:
              cpu: 200m
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-system-msi"
