kubernetes/hotelservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelservice
  labels:
    app: hotelservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotelservice
  template:
    metadata:
      labels:
        app: hotelservice
    spec:
      containers:
        - name: hotelservice
          image: bforslund/semester-6-hotel:122730
          imagePullPolicy: Always
          volumeMounts:
            - name: secrets-store01-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
            limits:
              cpu: 200m
      volumes:
      - name: secrets-store01-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-system-msi"
