kubernetes/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-deployment
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: influxdb
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - image: influxdb:1.8
          name: influxdb
          ports:
            - containerPort: 8086
