kubernetes/hotelQueryService-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotelqueryservice
spec:
  selector:
    app: hotelqueryservice
  ports:
    - name: http
      port: 80
      targetPort: 80
