kubernetes/rabbitmq-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq-client
  labels:
    app: rabbitmq
spec:
  ports:
   - name: http
     protocol: TCP
     port: 15672
   - name: amqp
     protocol: TCP
     port: 5672
  selector:
    app: rabbitmq
