kubernetes/bookingservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookingservice
spec:
  rules:
  - host: booking.bea.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookingservice
            port:
              name: http
